# QF_ZERO_V2_esp32s3

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig.defaults
main/: CMakeLists.txt  board.c  board.h  display.c  display.h  esp_lcd_panel_gc9a01.c  esp_lcd_panel_gc9a01.h  idf_component.yml  main.c  main.cpp  panel.c  panel.h
main/hal/: hal.cpp  hal.h  hal_config.h
main/hal/disp/: esp_lcd_panel_gc9a01.c  hal_disp.hpp
main/hal/hc32/: hc32.hpp
main/hal/lvgl/: hal_lvgl.hpp
main/hal/power/: hal_power.hpp
main/hal/rtc/: hal_rtc.hpp
main/hal/tp/: hal_tp.hpp
main/hardware_manager/: hardware_manager.cpp
main/ui/: main_ui.c  main_ui.cpp  main_ui.h
main/ui/apps/launcher/: launcher.cpp  launcher.h
main/ui/apps/settings/: settings.cpp  settings.h
simulator/: CMakeLists.txt  Makefile  lv_conf.h  lv_drv_conf.h
simulator/main/src/: main.c  main.cpp
